fixed a couple bugs, started work on shift rows

--- a/client/style/main.css
+++ b/client/style/main.css
@@ -333,3 +333,14 @@ font-size: clamp(8px, .7rem, 2rem);
 .singerInformationSections > img {
     align-self: center;
 }
+
+.timeLabels:hover{
+    cursor: pointer;
+    background-color: rgb(150, 223, 150);
+}
+
+.shiftRows{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: right;
+}
